# Telroa_final

dynamixel_sdk/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dynamixel_sdk/install/dynamixel_sdk/share/ament_index/resource_index/parent_prefix_path/: dynamixel_sdk
dynamixel_sdk/install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.sh  package.sh
dynamixel_sdk/log/: latest_build
telroa_communication_pkg/: CMakeLists.txt  package.xml
telroa_communication_pkg/include/: ControllerInfo.hpp
telroa_communication_pkg/lib/: CMakeLists.txt
telroa_communication_pkg/lib/GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  ui_mainwindow.h
telroa_communication_pkg/lib/SpaceMouse/: CMakeLists.txt
telroa_communication_pkg/lib/SpaceMouse/include/: SpaceMouse.hpp
telroa_communication_pkg/lib/SpaceMouse/src/: SpaceMouse.cpp
telroa_communication_pkg/lib/TelCon/: CMakeLists.txt
telroa_communication_pkg/lib/TelCon/include/: TelCon.hpp
telroa_communication_pkg/lib/TelCon/src/: TelCon.cpp
telroa_communication_pkg/lib/ThreadGenerator/: CMakeLists.txt  ThreadGenerator.cpp  ThreadGenerator.hpp
telroa_communication_pkg/lib/XBox/: CMakeLists.txt
telroa_communication_pkg/lib/XBox/include/: XBox.hpp
telroa_communication_pkg/lib/XBox/src/: XBox.cpp
telroa_communication_pkg/src/: comm_node.cpp
telroa_controller_pkg/: CMakeLists.txt  package.xml
telroa_controller_pkg/src/: control_node.cpp
telroa_hardware_pkg/: CMakeLists.txt
telroa_hardware_pkg/InverseKinematics/: CMakeLists.txt
telroa_hardware_pkg/InverseKinematics/include/: IKSolver2.hpp
telroa_hardware_pkg/InverseKinematics/src/: IKSolver2.cpp
telroa_hardware_pkg/MotorControl/: CMakeLists.txt
telroa_hardware_pkg/MotorControl/include/: MotorControl.hpp
telroa_hardware_pkg/MotorControl/src/: MotorControl.cpp
telroa_hardware_pkg/src/: hard_node.cpp  ik.cpp
telroa_interface_pkg/: CMakeLists.txt
telroa_interface_pkg/msg/: TwoSixTheta.msg  XBox.msg
telroa_launch_pkg/: CMakeLists.txt  package.xml
telroa_launch_pkg/launch/: carbon_pipe_arm.launch.py  demo_gazebo_left_arm.launch.py
telroa_launch_pkg/urdf/: 1st_link_1_1.stl  2nd_link_1_1.stl  3rd_link_1_1.stl  4th_link_1_1.stl  5th_link_1_1.stl  assembly_urdf.urdf  base_link.stl  carbon_pipe_arm.sdf  left_arm.sdf
